# cfn-resource-provider

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  releases.yml
master/: search-index.js  settings.html  source-files.js
master/cfn_resource_provider/: all.html  enum.CfnRequest.html  enum.CfnResponse.html  fn.process.html  index.html  sidebar-items.js  struct.Ignored.html  trait.PhysicalResourceIdSuffixProvider.html
master/implementors/cfn_resource_provider/: trait.PhysicalResourceIdSuffixProvider.js
master/implementors/core/clone/: trait.Clone.js
master/implementors/core/cmp/: trait.PartialEq.js
master/implementors/core/default/: trait.Default.js
master/implementors/core/fmt/: trait.Debug.js
master/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
master/implementors/serde/de/: trait.Deserialize.js
master/implementors/serde/ser/: trait.Serialize.js
master/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
master/src/cfn_resource_provider/: lib.rs.html
src/: lib.rs
tests/: cfnrequest_response_mock.rs  integration_awslambdarustruntime.rs  integration_rustawslambda.rs
