[package]
name = "cfn-resource-provider"
version = "0.1.2-alpha.0"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT OR Apache-2.0"
description = "AWS CloudFormation custom resource helper library"
homepage = "https://github.com/pitkley/cfn-resource-provider"
repository = "https://github.com/pitkley/cfn-resource-provider.git"

categories = ["api-bindings"]
keywords = ["amazon", "aws", "cloudformation", "cfn"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[badges]
travis-ci = { repository = "pitkley/cfn-resource-provider", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "^0.1"
futures = "^0.1"
reqwest = "^0.9"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"

[dev-dependencies]
lazy_static = "^1"
mockito = "^0.25"
tokio-core = "^0.1"
