[package]
name = "cfn-resource-provider"
version = "1.0.0-alpha.0"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT OR Apache-2.0"
description = "AWS CloudFormation custom resource helper library"
homepage = "https://github.com/pitkley/cfn-resource-provider"
repository = "https://github.com/pitkley/cfn-resource-provider.git"
edition = "2018"

categories = ["api-bindings"]
keywords = ["amazon", "aws", "cloudformation", "cfn"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[badges]
travis-ci = { repository = "pitkley/cfn-resource-provider", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.3.7"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", rev = "13aa8f01813e6949ca91aedafb286591fdf32217" }
reqwest = "0.10.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tokio-compat-02 = "0.1.2"

[dev-dependencies]
lazy_static = "1.4.0"
mockito = "0.28.0"
tokio = { version = "0.3.3", features = ["full"] }
